--- a/style.css
+++ b/style.css
@@ -1,55 +1,18 @@
 
 body {
-  background-color: rgb(228, 221, 212);
+  /*background-color: rgb(228, 221, 212);*/
 }
 
-.asideright {
-  width: 30%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-left: 15px;
-  float: right;
-  font-style: fantasy;
-  background-color: aliceblue;
+.imageright1 {
+  width: 350px;
+  height: 310px;
+  margin-right: 10vh;
   border-top-left-radius: 50%;
   border-top-right-radius: 50%;
   border-bottom-left-radius: 50%;
   border-bottom-right-radius: 50%;
 }
 
-#strength {
-  position:absolute;
-  width: 35%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-left: 55%;
-  margin-right:5%;
-  font-style: fantasy;
-  text-align: center;
-  border-style: solid;
-  border-color: darkcyan;
-  border-width: 10px;
-  border-radius: 7px;
-  background-color: rgb(104, 217, 245);
-  overflow:scroll;
-}
-
-#values {
-  width: 35%;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-right: 10%;
-  margin-left:5%;
-  float: left;
-  font-style: fantasy;
-  text-align: center;
-  border-style: solid;
-  border-color: darkcyan;
-  border-width: 10px;
-  border-radius: 7px;
-  background-color: rgb(104, 217, 245);
-  overflow:scroll;
-}
 
 p {
   padding-left: 30px; padding-right: 30px;
@@ -58,20 +21,16 @@ p {
 }
 
 h1 {
-  font-size: 1000%;
+  font-size: 800%;
   color: aliceblue;
-  border-style: solid;
-  border-color: darkcyan;
-  border-width: 20px;
-  border-radius: 7px;
-  background-color: rgb(104, 217, 245);
-}
+  padding: 9vh
+ }
 
 h2 {
   font-size: 600%;
   color: aliceblue;
   border-style: solid; 
-  border-radius: 7px;
+  border-radius: 5vh;
   border-color: darkcyan;
   border-width: 10px;
   background-color: rgb(104, 217, 245);
@@ -82,24 +41,13 @@ h2 {
 
 h3 {
   font-size: 500%;
+  text-align: center;
   color: aliceblue;
-}
-
-a {
-  color: rgb(71, 73, 73);
-  border-style: solid;
-  border-color: darkcyan;
-  border-width: thick;
-  border-radius: 7px;
-  background-color: rgb(104, 217, 245);
-  padding: 5px;
-  
 }
 
 #form1 {
   color: grey;
   font-size: 150%;
-  background-color: aliceblue;
 }
 
 table, th, td {
@@ -131,7 +79,20 @@ ul {
   padding: 5px;
 }
 
-nav.sticky {
-  position: sticky;
-  top: 0;
+.container {
+  border: 15px solid darkcyan;
+  border-radius: 5vh;
+  background-color: rgb(104, 217, 245);
+  margin: 10vh;
+}
+
+
+
+.col-5 {
+  border:10px solid darkcyan;
+  border-radius: 5vh;
+  background-color: rgb(104, 217, 245);
+  margin-top: 10vh;
+  margin-left: 10vh;
+  
 }
