--- a/style.css
+++ b/style.css
@@ -3,9 +3,14 @@ body {
   /*background-color: rgb(228, 221, 212);*/
 }
 
+img {
+  max-width: 100%;
+  height:auto;
+}
+
 .imageright1 {
-  width: 350px;
-  height: 310px;
+  width: 25vw;
+  height: 40vh;
   margin-right: 10vh;
   border-top-left-radius: 50%;
   border-top-right-radius: 50%;
@@ -13,9 +18,8 @@ body {
   border-bottom-right-radius: 50%;
 }
 
-
 p {
-  padding-left: 30px; padding-right: 30px;
+  padding-left: 4rem; padding-right: 4rem;
   font-size: 150%;
   color: grey;
 }
@@ -32,7 +36,7 @@ h2 {
   border-style: solid; 
   border-radius: 5vh;
   border-color: darkcyan;
-  border-width: 10px;
+  border-width: .1em;
   background-color: rgb(104, 217, 245);
   margin-right: 50%;
   text-align: center;
@@ -48,51 +52,58 @@ h3 {
 #form1 {
   color: grey;
   font-size: 150%;
+  padding: 1.5em;
+}
+
+#form {
+  background-color: rgb(252, 241, 227);
 }
 
 table, th, td {
-  font-size: 30px;
+  font-size: 1.4em;
   color: grey;
   border-style: solid;
-  border-radius: 7px;
+  border-radius: 1em;
   border-color: darkcyan;
-  border-width: 10px;
-  padding: 15px;
+  border-width: .1em;
+  padding: .6em;
   background-color: aliceblue;
   border-collapse: collapse;
 }
 
+#table {
+  margin: 2em;
+}
+
 ul {
-  font-size: 30px;
+  font-size: 1.75em;
   color: grey;
   
 }
 
 #submit1 {
   font-size: 150%;
-  color: rgb(71, 73, 73);
+  color: grey;
   border-style: solid;
   border-color: darkcyan;
   border-width: thick;
-  border-radius: 7px;
-  background-color: rgb(104, 217, 245);
-  padding: 5px;
+  border-radius: .5em;
+  background-color: aliceblue;
+  padding: .3em;
 }
 
 .container {
-  border: 15px solid darkcyan;
+  border: .7em solid darkcyan;
   border-radius: 5vh;
   background-color: rgb(104, 217, 245);
   margin: 10vh;
 }
 
-
-
 .col-5 {
-  border:10px solid darkcyan;
+  border: .6em solid darkcyan;
   border-radius: 5vh;
   background-color: rgb(104, 217, 245);
   margin-top: 10vh;
   margin-left: 10vh;
-  
 }
+    
