--- a/style.css
+++ b/style.css
@@ -1,35 +1,33 @@
 body {
-  background-color: rgb(228, 221, 212);
+  /*background-color: rgb(228, 221, 212);*/
+  background: linear-gradient(45deg, #FFCCCC, #CCFFFF);
 }
 
 p {
   padding: 5%;
   font-size: 1.5vw;
-  color: grey;
+  color: gray;
 }
 
 h1 {
   font-size: 800%;
-  text-align: center;
-  color: aliceblue;
-  padding: 10%;
-  
+  text-align: left;
+  color: teal;
+  padding: 7%;
  }
 
 h2 {
   font-size: 5vw;
-  color: aliceblue;
-  border: none;
-  border-radius: 3em;
-  background-color: rgb(127, 225, 250);
+  color: rgb(38, 155, 155);
   text-align: center;
+  
   
 }
 
 h3 {
   font-size: 4vw;
   text-align: center;
-  color: aliceblue;
+  color: gray;
   border: none;
 }
 
@@ -40,17 +38,17 @@ h3 {
 }
 
 #form {
-  background-color: white ;
+  
 }
 
 table, th, td {
   font-size: 2vw;
   color: grey;
   border-style: solid;
-  border-color: darkcyan;
+  border-color: rgb(248, 231, 137);
   border-width: .1em;
   padding: 5px;
-  background-color: aliceblue;
+  background-color: white;
   
 }
 
@@ -67,13 +65,13 @@ ul {
   font-size: 150%;
   color: grey;
   border-style: solid;
-  border-color: darkcyan;
+  border-color: rgb(248, 231, 137);
   border-width: thick;
   border-radius: .5em;
-  background-color: aliceblue;
+  background-color: white;
   /*padding: .3em;*/
 }
-
+/*
 #img1 {
   background-image: url("images/Wilderness_photo.jpeg");
   background-repeat: no-repeat;
@@ -82,34 +80,61 @@ ul {
   border-radius: 5rem;
   margin-top: 7%;
   margin-bottom: 7%;
+}*/
+
+#image2 {
+  width: 60vh;
+  float: right;
+  border-radius: 50%;
+  margin-top: 1.5%;
 }
 
 #double {
   border: none;
   border-radius: 3em;
-  background-color: rgb(127, 225, 250);
+  background-color: rgb(248, 231, 137);
   margin: auto;
 }
 
 #textstyle {
   font-size: 1.5vw;
-  color: grey;
+  color: gray;
   padding-left: 10%;
 }
 
 #jsbutton {
   font-size: 150%;
   color: grey;
-  background-color: aliceblue;
+  background-color: white;
   border-radius: .5em;
   border-style: solid;
-  border-color: darkcyan;
+  border-color: rgb(248, 231, 137);
   border-width: thick;
+  margin-left: 3.3%;
 }
 
 #compSkills {
-  color: grey;
+  color: gray;
   font-size: 200%;
+  margin-top: 5%;
   
+}
+
+#button3 {
+  margin-top: 5%;
+  margin-left: 5%;
+  font-size: 300%;
+  color: grey;
+  background: linear-gradient(90deg, rgba(255, 60, 0, 0.692), orange, rgb(248, 231, 137)); 
+  box-shadow: 5px 10px 20px;
+  border-radius: 20%;
+
+}
+
+#img4 {
+  width: 35vw;
+  margin-top: 5%;
+  margin-left: 8%;
+  margin-bottom: 8%;
 }
     
